2006-06-24 Michael Hutchinson <m.j.hutchinson@gmail.com>

	* configure.in: Allow choice of either Firefox or Mozilla

2006-04-26  Michael Hutchinson <m.j.hutchinson@gmail.com> 

	* Makefile.am, script.in: Use the MOZILLA_HOME determined by configure
	script.

2006-01-16 Michael Hutchinson <m.j.hutchinson@gmail.com>

	* config.in, INSTALL: update dependencies for new Toolbox
	*config.in: check for missing build directories, check for installed_chrome.txt

2005-09-17  Michael Hutchinson <m.j.hutchinson@gmail.com>

	* INSTALL: updated instructions regarding Mozilla extensions

2005-09-16  Everaldo Canuto  <everaldo@smios.org>

	* autogen.sh: Fix command order in autogen.sh, aclocal need to be run 
	first.